--- a/my-app/src/styles/HomeViewStyle.css
+++ b/my-app/src/styles/HomeViewStyle.css
@@ -138,3 +138,126 @@
   font-size: 25px;
   transition:ease 0.4s;
 }
+.container-slider-text
+{
+  position: relative;
+  top:195vh;
+  background-color: black;
+  width: 100%;
+  height:700px;
+}
+.slider-container {
+  width: 100%;
+  overflow: hidden;
+  background-color: black;
+}
+
+.slider-text {
+  font-size: 30px;
+  font-weight: bold ;
+  color: white;
+  display: inline-block;
+  white-space: nowrap;
+  animation: slide 35s infinite linear;
+}
+.slider-container2 {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  overflow: hidden;
+  background-color: black;
+}
+
+.slider-text2 {
+  font-size: 30px;
+  font-weight: bold ;
+  color: white;
+  display: inline-block;
+  white-space: nowrap;
+  animation: slide2 35s infinite linear;
+}
+.row-blackbox
+{
+  position: relative;
+  top: 100px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, auto));
+  gap: 2rem;
+  margin: 20px;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.item2-blackbox .image1-blackbox
+{
+  z-index: 100;
+  position: relative;
+  top:10px;
+  width: 260px;
+  height: 375px;
+  opacity: 0;
+  transform: translateX(-100%);
+  transition: opacity 1s, transform 1s;
+}
+.item2-blackbox .image1-blackbox.fade-in {
+  opacity: 1;
+  transform: translateX(0);
+}
+.item2-blackbox .image2-blackbox
+{
+  z-index: 100;
+  position: relative;
+  top:-30px;
+  right:25px;
+  width: 260px;
+  height: 375px;
+  opacity: 0;
+  transform: translateX(100%);
+  transition: opacity 1s, transform 1s;
+}
+.item2-blackbox .image2-blackbox.fade-in
+{
+  opacity: 1;
+  transform: translateX(0);
+}
+.item1-blackbox p
+{
+  font-size: 15px;
+  color: white;
+  margin: 0px 0px 25px;
+  font-weight: bold;
+}
+.item1-blackbox 
+{
+  text-align: center;
+}
+.item1-blackbox h5
+{
+  font-size: 35px;
+  color: white;
+  margin: 0px 0px 20px;
+}
+.back-to-top
+{
+    display: inline-block;
+    font-size: 15px;
+    border-radius: 10px;
+    background-color: white;
+    margin: 20px 0px 0px;
+    padding: 10px 25px;
+}
+@keyframes slide2 {
+    0% {
+      transform: translateX(-100%);
+    }
+    100% {
+      transform: translateX(65%);
+    }
+  }
+  @keyframes slide {
+    0% {
+      transform: translateX(65%);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+}
