--- a/my-app/src/styles/HomeViewStyle.css
+++ b/my-app/src/styles/HomeViewStyle.css
@@ -495,3 +495,357 @@ footer {
     font-weight: bold;
 }
 }
+@media screen and (max-width: 900px) {
+  .logo
+  {
+     z-index: 0;
+     cursor: pointer;
+  }
+  .menu1
+  {
+  display: none;
+  }
+  .menu2 
+  {
+      display: none;
+  }
+   .menu-icon 
+  {
+     z-index: 5;
+      display: block;
+  }
+  .content-above-video
+  {
+      display: none;
+  }
+  .menu1-bar 
+  {
+      
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      background-color: rgba(255, 255, 255, 0.329);
+      backdrop-filter: blur(6px);
+      width: 100%;
+      height: 100vh;
+      z-index: 6;
+      margin-left: -100%;
+      transition: all 0.3s ease-in-out;
+  }
+  .menu1-bar-men
+  {
+      display: flex;
+      position: absolute;
+      top:0;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      background-color: rgba(255, 255, 255, 0.329);
+      backdrop-filter: blur(6px);
+      width: 100%;
+      height: 100vh;
+      z-index: 6;
+      margin-left: -100%;
+      transition: all 0.3s ease-in-out;
+  }
+  .menu1-bar-women
+  {
+      
+      display: flex;
+      position: absolute;
+      top:0; 
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      background-color: rgba(255, 255, 255, 0.329);
+      backdrop-filter: blur(6px);
+      width: 100%;
+      height: 100vh;
+      z-index: 6;
+      margin-left: -100%;
+      transition: all 0.3s ease-in-out;
+  }
+  .menu1-bar-accessories
+  {
+      
+      display: flex;
+      position: absolute;
+      top:0;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      background-color: rgba(255, 255, 255, 0.329);
+      backdrop-filter: blur(6px);
+      width: 100%;
+      height: 100vh;
+      z-index: 6;
+      margin-left: -100%;
+      transition: all 0.3s ease-in-out;
+  }
+  .menu1-bar-decor
+  {
+      display: flex;
+      position: absolute;
+      top:0;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      background-color: rgba(255, 255, 255, 0.329);
+      backdrop-filter: blur(6px);
+      width: 100%;
+      height: 100vh;
+      z-index: 6;
+      margin-left: -100%;
+      transition: all 0.3s ease-in-out;
+  }
+  .close-arrow-men
+  {
+    position: absolute;
+    top:50px;
+    left:50px;
+    font-size: 20px;
+  }
+  .close-arrow-women
+  {
+    position: absolute;
+    top:50px;
+    left:50px;
+    font-size: 20px;
+  }
+  .close-arrow-accessories
+  {
+    position: absolute;
+    top:50px;
+    left:50px;
+    font-size: 20px;
+  }
+  .close-arrow-decor
+  {
+    position: absolute;
+    top:50px;
+    left:50px;
+    font-size: 20px;
+  }
+  .menu1-bar-men.mobile-menu
+  {
+  margin-left: 0;
+  transition: all 0.3s ease-in-out;
+  }
+  .menu1-bar-women.mobile-menu
+  {
+  margin-left: 0;
+  transition: all 0.3s ease-in-out;
+  }
+  .menu1-bar-accessories.mobile-menu
+  {
+  margin-left: 0;
+  transition: all 0.3s ease-in-out;
+  }
+  .menu1-bar-decor.mobile-menu
+  {
+    margin-left: 0;
+    transition: all 0.3s ease-in-out;
+  }
+  .menu1-bar.mobile-menu
+  {
+  margin-left: 0;
+  transition: all 0.3s ease-in-out;
+  }
+    
+  .menu1-bar li 
+  {
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 10px;
+  }
+  .menu1-bar-men li 
+  {
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 10px;
+  }
+  .menu1-bar-women li 
+  {
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 10px;
+  }
+  .menu1-bar-accessories li 
+  {
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 10px;
+  }
+  .menu1-bar-decor li 
+  {
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 10px;
+  }
+  .menu1-bar li a 
+  {
+      margin: 10px;
+      color: #000000;
+      font-weight: 700;
+      text-decoration: none;
+      font-size: 2em;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      margin: 25px;
+  }
+  .menu1-bar-men li a 
+  {
+      margin: 10px;
+      color: #000000;
+      font-weight: 700;
+      text-decoration: none;
+      font-size: 2em;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      margin: 25px;
+  }
+  .menu1-bar-women li a 
+  {
+      margin: 10px;
+      color: #000000;
+      font-weight: 700;
+      text-decoration: none;
+      font-size: 2em;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      margin: 25px;
+  }
+  .menu1-bar-accessories li a 
+  {
+      margin: 10px;
+      color: #000000;
+      font-weight: 700;
+      text-decoration: none;
+      font-size: 2em;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      margin: 25px;
+  }
+  .menu1-bar-decor li a 
+  {
+      margin: 10px;
+      color: #000000;
+      font-weight: 700;
+      text-decoration: none;
+      font-size: 2em;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      margin: 25px;
+  }
+  .image-container .image1{
+      position: absolute;
+      top:100%;
+      left: 0%;
+      height: 40%;
+      width: 100%;
+      object-fit:cover;
+      object-position:center;
+      filter: brightness(70%);
+      
+  }
+  .image-container .image2{
+      position: absolute;
+      top:138.5%;
+      left: 0%;
+      height: 40%;
+      width: 100%;
+      object-fit:cover;
+      object-position:center;
+      filter: brightness(70%);
+  }
+  .image-container .image3{
+      position: absolute;
+      padding: 10px;
+      left:0%;
+      top: 177%;
+      height: 40%;
+      width:100%;
+      object-fit:cover;
+      object-position:center;
+      filter: brightness(70%);
+  }
+  .image-container .image4{
+      position: absolute;
+      padding: 10px;
+      top:215.5%;
+      left:0%;
+      height: 40%;
+      width: 100%;
+      object-fit:cover;
+      object-position:center;
+      filter: brightness(70%);
+  }
+  .image-text1
+  {
+      position: absolute;
+      left:30%;
+      top: 115%;
+      color: white;
+      font-size: 40px;
+      font-weight: bold;
+  }
+  .image-text2
+  {
+      position: absolute;
+      left:30%;
+      top: 155%;
+      color: white;
+      font-size: 40px;
+      font-weight: bold;
+  }
+  .image-text3
+  {
+      position: absolute;
+      left: 30%;
+      top: 195%;
+      color: white;
+      font-size: 40px;
+      font-weight: bold;
+  }
+  .image-text4
+  {
+      position: absolute;
+      left: 30%;
+      top: 235%;
+      color: white;
+      font-size: 40px;
+      font-weight: bold;
+  }
+  .item1-blackbox
+  {
+    position: relative;
+    top: 400px;
+      width: 100%;
+      height: 300px;
+
+  }
+  .info-row
+  {
+    display: block;
+  }
+  .item1-info
+{
+padding: 0px 40px 0px 40px;
+width: 100%;
+}
+.item2-info
+{
+padding: 0px 40px 0px 40px;
+}
+}
