--- a/my-app/src/styles/HomeViewStyle.css
+++ b/my-app/src/styles/HomeViewStyle.css
@@ -849,3 +849,14 @@ width: 100%;
 padding: 0px 40px 0px 40px;
 }
 }
+@media (max-width: 768px) {
+  .footer-container {
+    max-width: 100%;
+    padding: 0 20px;
+  }
+
+  .footer-container ul li {
+    display: block;
+    margin: 10px 0;
+  }
+}
