--- a/my-app/src/styles/ProductComponent.css
+++ b/my-app/src/styles/ProductComponent.css
@@ -18,3 +18,41 @@
     height: auto;
     transition: all .40s;
 }
+.product-item-title
+{
+  font-weight: bold;
+  font-size: large;
+}
+.circle-container
+{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    width: 35px; 
+    height: 35px;
+    border-radius: 50%; 
+    background-color: white;
+    border: 2px solid rgb(0, 0, 0); 
+    transition:ease 0.4s;
+}
+.hearth-icon
+{
+  position: absolute;
+  font-size: 13px;
+  right: 6px;
+  top: 9px;
+  transition:ease 0.4s;
+}
+.hearth-icon:hover
+{
+    font-size: 13px;
+  transition:ease 0.4s;
+}
+.circle-container:hover
+{
+    cursor: pointer;
+   
+    border: 2px solid rgb(0, 0, 0); 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Shadow effect */
+    transition:ease 0.4s;
+}
