getting product info in ProductDetails page

--- a/my-app/src/styles/ProductComponent.css
+++ b/my-app/src/styles/ProductComponent.css
@@ -60,3 +60,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Shadow effect */
     transition:ease 0.4s;
 }
+.link-style{
+  text-decoration: none; 
+  color: black;
+}
