--- a/my-app/src/styles/cartShowComponent.css
+++ b/my-app/src/styles/cartShowComponent.css
@@ -1,7 +1,7 @@
 .cartmini-container {
     width: 500px;
     height: 945px;
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
     margin-left: auto;
@@ -60,4 +60,23 @@
     margin-top: 20px;
     height: 50px;
     border-radius: 5px;
+}
+.scrolabble-container-products-cartmini{
+    display: flex;
+    flex-direction: column;
+    background-color: red;
+    overflow-y: auto; 
+    height: 680px;
+    width: 100%;
+}
+.product-cartmini{
+    display: flex;
+    width: 463px;
+    height:90px;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+.product-cartmini img{
+height: 100%;
+
 }
