--- a/my-app/src/styles/cartShowComponent.css
+++ b/my-app/src/styles/cartShowComponent.css
@@ -14,7 +14,7 @@
     height: 80px;
     display: flex;
     justify-content: right;
-    align-items: center; 
+    align-items: center;
 }
 
 .closecartmini-button {
@@ -24,12 +24,14 @@
     align-items: center;
     justify-content: center;
 }
-.closecartmini-button p{
+
+.closecartmini-button p {
     font-size: x-large;
     display: flex;
     align-self: center;
     margin: 0;
 }
+
 .cartmini-footer {
     background-color: bisque;
     display: flex;
@@ -39,20 +41,24 @@
     width: 100%;
     padding: 40px;
 }
-.cartmini-sum{
+
+.cartmini-sum {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
-.cartmini-sum p{
-    font-size:larger;
+
+.cartmini-sum p {
+    font-size: larger;
     font-weight: bolder;
 }
-.checkout-button-cartmini{
+
+.checkout-button-cartmini {
     width: 100%;
 }
-.checkout-button-cartmini button{
+
+.checkout-button-cartmini button {
     border: none;
     background-color: black;
     color: white;
@@ -61,22 +67,68 @@
     height: 50px;
     border-radius: 5px;
 }
-.scrolabble-container-products-cartmini{
+
+.scrolabble-container-products-cartmini {
     display: flex;
     flex-direction: column;
-    background-color: red;
-    overflow-y: auto; 
+    background-color: rgb(255, 255, 255);
+    overflow-y: auto;
     height: 680px;
     width: 100%;
 }
-.product-cartmini{
+
+.product-cartmini {
     display: flex;
     width: 463px;
-    height:90px;
+    height: 90px;
     margin-top: 20px;
     margin-left: 20px;
 }
-.product-cartmini img{
-height: 100%;
 
+.product-cartmini img {
+    height: 100%;
+    border-radius: 5px;
+}
+
+.product-cartmini-col1 {
+    display: flex;
+    flex-direction: column;
+    margin-left:10px ;
+}
+.product-cartmini-name {
+    margin: 0;
+    font-size: medium;
+    font-weight: 600;
+    color: black;
+}
+
+.product-cartmini-price {
+    margin-right: auto;
+    margin-bottom: auto;
+    margin: 0;
+    font-size: small;
+    font-weight: 600;
+    color: black;
+}
+.product-cartmini-size p{
+    margin-top:20px;
+}
+.product-cartmini-size select{
+    border: none;
+    width: 50px;
+    border-bottom: 2px solid black;
+}
+.product-cartmini-size{
+    margin-top:20px;
+    margin-bottom: 0;
+    display: flex;
+    flex-direction: row;
+}
+.product-cartmini-size-container{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+.product-cartmini-size{
+    
 }
