--- a/my-app/src/styles/cartShowComponent.css
+++ b/my-app/src/styles/cartShowComponent.css
@@ -1,3 +1,32 @@
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 9998; 
+    transition: opacity 0.3s ease;
+}
+
+.overlay-show {
+    display: block;
+}
+
+.cartShowComponent{
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    right: 0;
+    margin-right: -100%;
+    transition: margin-right 0.3s ease;
+}
+
+.cartShowComponent-show{
+    display: block;
+    margin-right: 0;
+}
 .cartmini-container {
     width: 500px;
     height: 945px;
@@ -5,7 +34,6 @@
     display: flex;
     flex-direction: column;
     margin-left: auto;
-    z-index: 5;
 }
 
 .close-cartmini {
