--- a/my-app/src/styles/cartShowComponent.css
+++ b/my-app/src/styles/cartShowComponent.css
@@ -7,7 +7,6 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5); 
     z-index: 9998; 
-    transition: opacity 0.3s ease;
 }
 
 .overlay-show {
@@ -20,12 +19,12 @@
     z-index: 9999;
     right: 0;
     margin-right: -100%;
-    transition: margin-right 0.3s ease;
 }
 
 .cartShowComponent-show{
     display: block;
     margin-right: 0;
+    transition: all 5s ease-in-out;
 }
 .cartmini-container {
     width: 500px;
@@ -51,6 +50,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 .closecartmini-button p {
