--- a/my-app/src/styles/MobileMenu.css
+++ b/my-app/src/styles/MobileMenu.css
@@ -1,58 +1,53 @@
-.menu-icon
-{
-
-    position: absolute;
+.menu-icon {
+    position: fixed;
     top: 50px;
     right: 50px;
+    display: none;
+}
 
+.menu1-bar {
     display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
-.menu1-bar
-{
-display: none;
+
+.menu1-bar-men,
+.menu1-bar-women,
+.menu1-bar-accessories,
+.menu1-bar-decor {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
-.menu1-bar-men
-{
-display: none;
-}
-.menu1-bar-women
-{
-display: none;
-}
-.menu1-bar-accessories
-{
-display: none;
-}
-.menu1-bar-decor
-{
-display: none;
-}
+
 @media screen and (max-width: 900px) {
-    .logo
-    {
-       z-index: 0;
-       cursor: pointer;
+    .logo {
+        z-index: 0;
+        cursor: pointer;
     }
-    .menu1
-    {
-    display: none;
-    }
-    .menu2 
-    {
+
+    .menu1,
+    .menu2 {
         display: none;
     }
-     .menu-icon 
-    {
-       z-index: 5;
+
+    .menu-icon {
+        z-index: 999;
         display: block;
+        cursor: pointer;
     }
-    .content-above-video
-    {
+
+    .content-above-video {
         display: none;
     }
-    .menu1-bar 
-    {
-        
+
+    .menu1-bar,
+    .menu1-bar-men,
+    .menu1-bar-women,
+    .menu1-bar-accessories,
+    .menu1-bar-decor {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -62,215 +57,46 @@ display: none;
         width: 100%;
         height: 100vh;
         z-index: 6;
-        margin-left: -100%;
-        transition: all 0.3s ease-in-out;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-in-out;
     }
-    .menu1-bar-men
-    {
-        display: flex;
+
+    .close-arrow-men,
+    .close-arrow-women,
+    .close-arrow-accessories,
+    .close-arrow-decor {
         position: absolute;
-        top:0;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        background-color: rgba(255, 255, 255, 0.329);
-        backdrop-filter: blur(6px);
-        width: 100%;
-        height: 100vh;
-        z-index: 6;
-        margin-left: -100%;
-        transition: all 0.3s ease-in-out;
+        top: 50px;
+        left: 50px;
+        font-size: 20px;
     }
-    .menu1-bar-women
-    {
-        
-        display: flex;
-        position: absolute;
-        top:0; 
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        background-color: rgba(255, 255, 255, 0.329);
-        backdrop-filter: blur(6px);
-        width: 100%;
-        height: 100vh;
-        z-index: 6;
-        margin-left: -100%;
-        transition: all 0.3s ease-in-out;
+
+    .menu1-bar-men.mobile-menu,
+    .menu1-bar-women.mobile-menu,
+    .menu1-bar-accessories.mobile-menu,
+    .menu1-bar-decor.mobile-menu,
+    .menu1-bar.mobile-menu {
+        transform: translateX(0);
+        transition: transform 0.3s ease-in-out;
     }
-    .menu1-bar-accessories
-    {
-        
-        display: flex;
-        position: absolute;
-        top:0;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        background-color: rgba(255, 255, 255, 0.329);
-        backdrop-filter: blur(6px);
-        width: 100%;
-        height: 100vh;
-        z-index: 6;
-        margin-left: -100%;
-        transition: all 0.3s ease-in-out;
-    }
-    .menu1-bar-decor
-    {
-        display: flex;
-        position: absolute;
-        top:0;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        background-color: rgba(255, 255, 255, 0.329);
-        backdrop-filter: blur(6px);
-        width: 100%;
-        height: 100vh;
-        z-index: 6;
-        margin-left: -100%;
-        transition: all 0.3s ease-in-out;
-    }
-    .close-arrow-men
-    {
-      position: absolute;
-      top:50px;
-      left:50px;
-      font-size: 20px;
-    }
-    .close-arrow-women
-    {
-      position: absolute;
-      top:50px;
-      left:50px;
-      font-size: 20px;
-    }
-    .close-arrow-accessories
-    {
-      position: absolute;
-      top:50px;
-      left:50px;
-      font-size: 20px;
-    }
-    .close-arrow-decor
-    {
-      position: absolute;
-      top:50px;
-      left:50px;
-      font-size: 20px;
-    }
-    .menu1-bar-men.mobile-menu
-    {
-    margin-left: 0;
-    transition: all 0.3s ease-in-out;
-    }
-    .menu1-bar-women.mobile-menu
-    {
-    margin-left: 0;
-    transition: all 0.3s ease-in-out;
-    }
-    .menu1-bar-accessories.mobile-menu
-    {
-    margin-left: 0;
-    transition: all 0.3s ease-in-out;
-    }
-    .menu1-bar-decor.mobile-menu
-    {
-      margin-left: 0;
-      transition: all 0.3s ease-in-out;
-    }
-    .menu1-bar.mobile-menu
-    {
-    margin-left: 0;
-    transition: all 0.3s ease-in-out;
-    }
-      
-    .menu1-bar li 
-    {
+
+    .menu1-bar li,
+    .menu1-bar-men li,
+    .menu1-bar-women li,
+    .menu1-bar-accessories li,
+    .menu1-bar-decor li {
         list-style: none;
         display: flex;
         flex-direction: column;
         align-items: center;
         margin: 10px;
     }
-    .menu1-bar-men li 
-    {
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 10px;
-    }
-    .menu1-bar-women li 
-    {
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 10px;
-    }
-    .menu1-bar-accessories li 
-    {
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 10px;
-    }
-    .menu1-bar-decor li 
-    {
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 10px;
-    }
-    .menu1-bar li a 
-    {
-        margin: 10px;
-        color: #000000;
-        font-weight: 700;
-        text-decoration: none;
-        font-size: 2em;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        margin: 25px;
-    }
-    .menu1-bar-men li a 
-    {
-        margin: 10px;
-        color: #000000;
-        font-weight: 700;
-        text-decoration: none;
-        font-size: 2em;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        margin: 25px;
-    }
-    .menu1-bar-women li a 
-    {
-        margin: 10px;
-        color: #000000;
-        font-weight: 700;
-        text-decoration: none;
-        font-size: 2em;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        margin: 25px;
-    }
-    .menu1-bar-accessories li a 
-    {
-        margin: 10px;
-        color: #000000;
-        font-weight: 700;
-        text-decoration: none;
-        font-size: 2em;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        margin: 25px;
-    }
-    .menu1-bar-decor li a 
-    {
+
+    .menu1-bar li a,
+    .menu1-bar-men li a,
+    .menu1-bar-women li a,
+    .menu1-bar-accessories li a,
+    .menu1-bar-decor li a {
         margin: 10px;
         color: #000000;
         font-weight: 700;
