--- a/my-app/src/styles/NavBarStyle.css
+++ b/my-app/src/styles/NavBarStyle.css
@@ -11,7 +11,7 @@ body::-webkit-scrollbar {
 }
 
 header {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -19,6 +19,11 @@ header {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  z-index: 999;
+  transition: background-color 0.3s ease;
+}
+header.scrolled {
+  background-color: rgba(255, 255, 255, 0.329); /* Adjust background color as needed */
 }
 
 .menu1 li {
