--- a/my-app/src/styles/NavBarStyle.css
+++ b/my-app/src/styles/NavBarStyle.css
@@ -23,7 +23,7 @@ header {
   transition: background-color 0.3s ease;
 }
 header.scrolled {
-  background-color: rgba(255, 255, 255, 0.329); /* Adjust background color as needed */
+  background-color: rgba(255, 255, 255, 0.329); 
 }
 
 .menu1 li {
