--- a/my-app/src/styles/CheckoutView.css
+++ b/my-app/src/styles/CheckoutView.css
@@ -3,23 +3,41 @@
     height: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
     margin-top: 130px;
 }
-
+.container-checkout1{
+    width: 100%;
+    height: 100%;
+    border-top: 1.5px solid rgb(160, 160, 160);
+    border-right: 1.5px solid rgb(160, 160, 160);
+}
+.container-checkout2{
+    width: 100%;
+    height: 100%;
+    border-top: 1.5px solid rgb(160, 160, 160);
+}
 .checkout-col1 {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 660px;
+    width: 80%;
+    margin-left: auto;
+    background-color: white;
+    padding: 38px;
+    margin-bottom: auto;
+}
+.checkout-col2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
     height: auto;
     background-color: white;
     padding: 38px;
     margin-bottom: auto;
 }
-
 .checkout-col1 h1 {
     font-weight: bolder;
     font-size: x-large;
@@ -29,8 +47,7 @@
 .checkout-products {
     display: flex;
     flex-direction: column;
-    background-color: rgb(88, 81, 81);
-    overflow-y: auto;
+    background-color: rgb(255, 255, 255);
     height: 680px;
     width: 100%;
 }
@@ -98,4 +115,94 @@
     color: white;
     font-weight:800;
     border-style: none;
+}
+
+.product-checkout {
+    display: flex;
+    width: 100%;
+    height: 80px;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+.product-checkout img {
+    height: 100%;
+    border-radius: 5px;
+}
+
+.product-checkout-row {
+    display: flex;
+    flex-direction: row;
+    margin-left:10px ;
+    width: 100%;
+}
+.product-checkout-name {
+    margin: 0;
+    font-size: medium;
+    font-weight: 400;
+    color: black;
+    width: 100%;
+}
+
+.product-checkout-price {
+    margin-left: auto;
+    margin-bottom: auto;
+    margin: 0;
+    font-size: small;
+    font-weight: 600;
+    color: black;
+    padding-right: 20px;
+}
+.product-checkout-size select{
+    border: none;
+    width: 50px;
+    border-bottom: 2px solid black;
+}
+.product-checkout-size{
+    margin-bottom: 0;
+    display: flex;
+    flex-direction: row;
+    font-size: small;
+}
+.product-checkout-quantity{
+    width: 20px;
+    border: none;
+    margin: 0;
+    text-align: center;
+    font-weight: 600;
+    color: white;
+}
+.product-checkout-quantity-container{
+    background-color: rgba(61, 61, 61, 0.788);
+    width: 20px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    transform: translateX(-25px) translateY(-8px);
+}
+.product-checkout-col{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.checkout-footer {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    padding-left: 20px;
+    height: 188px;
+    width: 100%;
+}
+.checkout-sum {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.checkout-sum p {
+    font-size: larger;
+    font-weight: bolder;
 }
