--- a/my-app/src/styles/ProductDetailsNoSize.css
+++ b/my-app/src/styles/ProductDetailsNoSize.css
@@ -56,7 +56,7 @@
     font-weight: 300;
     margin: 0;
 }
-.quantity-choosing {
+.quantity-choosing-ns {
    margin-left: 0;
    border-bottom: 3px solid black;
 }
