--- a/my-app/src/styles/ProductComponentAdmin.css
+++ b/my-app/src/styles/ProductComponentAdmin.css
@@ -20,19 +20,36 @@
 
 .select-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
   transform: translateY(180px);
   width: 100%;
 }
 
-.select-container select {
+.category-select {
   border: none;
   font-size: large;
   width: 20%;
   border-bottom: 3px solid black;
+  margin-left: 10px;
+  margin-right: 20px;
+  padding: 10px;
 }
-
+.sort-select{
+  border: none;
+  font-size: large;
+  width: 20%;
+  border-bottom: 3px solid black;
+  padding: 10px;
+}
+.add-product{
+  border: none;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  padding: 10px;
+}
 .button-container-admin {
   display: flex;
   flex-direction: row;
