--- a/my-app/src/styles/productComponentStyles/ProductDetailsNoSize.css
+++ b/my-app/src/styles/productComponentStyles/ProductDetailsNoSize.css
@@ -15,43 +15,12 @@
 
 
 /*Product*/
-.product-details-container{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around; 
-    margin-top: 170px;
-}
-.product-container-small{
-    width: 1300px;
-    display: flex;
-}
 
-.image-container img{
-    width: 100%;
-    display: block;
-}
-.image-container{
-    width: 50%;
-    padding-right: 45px;
-}
-.details-container{
-    width: 50%;
-    padding-left: 45px;
-}
-.product-name{
-    font-weight:800;
-    font-size: 50px;
-}
-.product-price{
-    font-weight:bold;
-    font-size:large;
-}
-.choosing{
+.choosing-ns{
     display: flex;
     margin: 30px 30px 30px 0px;
 }
-.quantity-choosing p{
+.quantity-choosing-ns p{
     font-size: large;
     font-weight: 300;
     margin: 0;
@@ -60,35 +29,22 @@
    margin-left: 0;
    border-bottom: 3px solid black;
 }
-.quantity-choosing input[type="number"]{
+.quantity-choosing-ns input[type="number"]{
     width: 90px;
 }
-.add-to-cart{
-    width: 100%;
-    padding: 20px 0 20px 0;
-    background-color: black;
-    color: white;
-    border: none;
-    border-radius: 5px;
-}
-.product-description{
-    width: 100%;
-}
-.product-description h5{
-    margin: 20px 0px 20px 0px;
-    font-weight: 500;
-    border-bottom: 3px solid black;
-}
-.product-description p{
-    font-size: 19px;
-}
 @media (max-width: 768px) {
-    .product-container-small {
-        flex-direction: column; 
-    }
-
-    .image-container,
-    .details-container {
+    .quantity-choosing-ns{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         width: 100%;
+    }
+    .quantity-choosing-ns input[type="number"]{
+        width: 100%;
+    }
+    .choosing-ns{
+        display: flex;
+        margin-top:30px;
     }
 }
