--- a/my-app/src/styles/productComponentStyles/ProductDetails.css
+++ b/my-app/src/styles/productComponentStyles/ProductDetails.css
@@ -140,3 +140,12 @@
     margin-bottom: 50px;
     font-weight:900;
 }
+
+.back-to-category-button {
+    padding: 10px 100px 10px 100px;
+    border: 2px solid black;
+    margin-top:100px;
+    text-decoration: none; 
+    color: black; 
+    border-radius: 5px;
+}
