--- a/my-app/src/styles/productComponentStyles/ProductDetails.css
+++ b/my-app/src/styles/productComponentStyles/ProductDetails.css
@@ -144,6 +144,7 @@
 .back-to-category-button {
     padding: 10px 100px 10px 100px;
     border: 2px solid black;
+    transform: translateY(60px);
     margin-top:100px;
     text-decoration: none; 
     color: black; 
