--- a/my-app/src/styles/HomeViewStyle.css
+++ b/my-app/src/styles/HomeViewStyle.css
@@ -472,7 +472,7 @@ footer {
      z-index: 0;
      cursor: pointer;
   }
-  footer{
+  .footer-home{
     margin-top: -200px;
   }
   .container-slider-text{
