--- a/my-app/src/styles/MobileMenu.css
+++ b/my-app/src/styles/MobileMenu.css
@@ -1,9 +1,4 @@
-.menu-icon {
-    position: fixed;
-    top: 50px;
-    right: 50px;
-    display: none;
-}
+
 .no-scroll {
     overflow: hidden !important;
   } 
@@ -35,17 +30,48 @@
         display: none;
     }
 
-    .menu-icon {
-        z-index: 999;
-        display: block;
-        cursor: pointer;
-    }
-
+ 
     .content-above-video {
         display: none;
     }
 
-    .menu1-bar,
+    .menu1-bar {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        flex-direction: column;
+        background-color: rgba(255, 255, 255, 0.329);
+        backdrop-filter: blur(6px);
+        width: 100%;
+        height: 100vh;
+        z-index: 998;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-in-out;
+    }
+    .menu1-bar ul {
+        padding-left: 0px;
+    }
+    .menu1-bar-men ul,
+    .menu1-bar-women ul,
+    .menu1-bar-accessories ul,
+    .menu1-bar-decor ul{
+        padding-left: 0px;
+    }
+    .cart-quantity-mobile {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 19px;
+        width: 19px;
+        background-color:rgb(255, 0, 0);
+        color: white;
+        border-radius: 50%;
+        font-size: 18px;
+        font-weight: bold;
+        transform: translateX(55px) translateY(-50px);
+        margin-top: -11px;
+      }
     .menu1-bar-men,
     .menu1-bar-women,
     .menu1-bar-accessories,
@@ -53,12 +79,13 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        text-align: center;
         flex-direction: column;
         background-color: rgba(255, 255, 255, 0.329);
         backdrop-filter: blur(6px);
         width: 100%;
         height: 100vh;
-        z-index: 6;
+        z-index: 999;
         transform: translateX(-100%);
         transition: transform 0.3s ease-in-out;
     }
@@ -68,12 +95,12 @@
     .close-arrow-accessories,
     .close-arrow-decor {
         position: absolute;
-        top: 50px;
+        top: 50px; 
         left: 50px;
         font-size: 20px;
-        width: 20px;
+        width: 25px;
+        z-index: 1000; 
         height: 20px;
-        z-index: 999;
     }
 
     .menu1-bar-men.mobile-menu,
@@ -90,11 +117,11 @@
     .menu1-bar-women li,
     .menu1-bar-accessories li,
     .menu1-bar-decor li {
+        margin: 10px;
         list-style: none;
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 10px;
     }
 
     .menu1-bar li a,
@@ -109,6 +136,5 @@
         font-size: 2em;
         text-transform: uppercase;
         letter-spacing: 1px;
-        margin: 25px;
     }
 }
