--- a/my-app/src/styles/NavBarStyle.css
+++ b/my-app/src/styles/NavBarStyle.css
@@ -15,7 +15,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 30px 10px;
+  padding: 30px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -24,6 +24,9 @@ header {
 }
 header.scrolled {
   background-color: rgba(255, 255, 255, 0.329); 
+}
+.menu-icon {
+  display: none;
 }
 
 .menu1 li {
@@ -144,8 +147,16 @@ header.scrolled {
   margin-top: -11px;
 }
 
+
 @media (max-width: 768px) {
   .menu2{
     display: none;
+  }
+  .menu-icon {
+    position: fixed;
+    top: 50px;
+    right: 50px;
+    display: block;
+    z-index: 999;
   }
 }
