--- a/my-app/src/styles/cartShowComponent.css
+++ b/my-app/src/styles/cartShowComponent.css
@@ -1,3 +1,7 @@
+body, html {
+    height: 100%;
+}
+
 .overlay {
     display: none;
     position: fixed;
@@ -8,15 +12,17 @@
     background-color: rgba(0, 0, 0, 0.5); 
     z-index: 9998; 
 }
-.no-products-cart{
+
+.no-products-cart {
     display: flex;
     justify-content: center;
 }
+
 .overlay-show {
     display: block;
 }
 
-.cartShowComponent{
+.cartShowComponent {
     display: none;
     position: fixed;
     z-index: 9999;
@@ -24,11 +30,12 @@
     margin-right: -100%;
 }
 
-.cartShowComponent-show{
+.cartShowComponent-show {
     display: block;
     margin-right: 0;
     transition: all 5s ease-in-out;
 }
+
 .cartmini-container {
     width: 500px;
     height: 945px;
@@ -46,7 +53,7 @@
     justify-content: right;
     align-items: center;
     z-index: 99999;
-    box-shadow: 0 4px 6px rgba(0, 0, 0,0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .closecartmini-button {
@@ -66,7 +73,6 @@
 }
 
 .cartmini-footer {
-    
     display: flex;
     flex-direction: column;
     margin-top: auto;
@@ -126,8 +132,9 @@
 .product-cartmini-col1 {
     display: flex;
     flex-direction: column;
-    margin-left:10px ;
+    margin-left: 10px;
 }
+
 .product-cartmini-name {
     margin: 0;
     font-size: medium;
@@ -143,26 +150,31 @@
     font-weight: 600;
     color: black;
 }
-.product-cartmini-size p{
-    margin-top:20px;
+
+.product-cartmini-size p {
+    margin-top: 20px;
 }
-.product-cartmini-size select{
+
+.product-cartmini-size select {
     border: none;
     width: 50px;
     border-bottom: 2px solid black;
 }
-.product-cartmini-size{
-    margin-top:20px;
+
+.product-cartmini-size {
+    margin-top: 20px;
     margin-bottom: 0;
     display: flex;
     flex-direction: row;
 }
-.product-cartmini-size-container{
+
+.product-cartmini-size-container {
     display: flex;
     flex-direction: row;
     width: 100%;
 }
-.product-cartmini-quantity-remove{
+
+.product-cartmini-quantity-remove {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -170,14 +182,28 @@
     margin-left: auto;
     width: 60px;
 }
-.product-cartmini-quantity{
+
+.product-cartmini-quantity {
     text-align: center;
     margin-left: 10px;
     width: 100%;
     border: none;
 }
-.remove-button-cartmini{
+
+.remove-button-cartmini {
     border: none;
     background-color: white;
     border-top: 2px solid black;
+}
+
+@media screen and (max-width: 500px) {
+    .cartShowComponent {
+        width: 100%;
+        height: 100%;
+    }
+
+    .cartmini-container {
+        width: 100%;
+        height: 100%;
+    }
 }
