--- a/my-app/src/styles/HomeViewStyle.css
+++ b/my-app/src/styles/HomeViewStyle.css
@@ -492,12 +492,10 @@ footer {
     height: 285px;
     right: 0;
     opacity: 0;
-    transform: translateX(-100%);
-    transition: opacity 1s, transform 1s;
+    transition: opacity 1s;
   }
   .item2-blackbox .image1-blackbox.fade-in {
     opacity: 1;
-    transform: translateX(0);
   }
   .item2-blackbox .image2-blackbox
   {
@@ -508,13 +506,11 @@ footer {
     width: 180px;
     height: 285px;
     opacity: 0;
-    transform: translateX(100%);
-    transition: opacity 1s, transform 1s;
+    transition: opacity 1s;
   }
   .item2-blackbox .image2-blackbox.fade-in
   {
     opacity: 1;
-    transform: translateX(0);
   }
   .products{
     top: 270vh;
@@ -632,6 +628,36 @@ padding: 0px 40px 0px 40px;
 }
 }
 @media (max-width: 768px) {
+  .item2-blackbox .image1-blackbox
+  {
+    z-index: 3;
+    position: relative;
+    top:-450px;
+    width: 180px;
+    height: 285px;
+    right: 0;
+    opacity: 0;
+    transition: opacity 1s;
+  }
+  .item2-blackbox .image1-blackbox.fade-in {
+    opacity: 1;
+  }
+  .item2-blackbox .image2-blackbox
+  {
+    z-index: 3;
+    display: none;
+    position: relative;
+    top:-450px;
+    right:-10px;
+    width: 180px;
+    height: 285px;
+    opacity: 0;
+    transition: opacity 1s;
+  }
+  .item2-blackbox .image2-blackbox.fade-in
+  {
+    opacity: 1;
+  }
   .footer-container {
     max-width: 100%;
     padding: 0 20px;
