--- a/my-app/src/styles/NavBarStyle.css
+++ b/my-app/src/styles/NavBarStyle.css
@@ -55,7 +55,11 @@ header.scrolled {
 .navtext-accessories,
 .navtext-decor {
   font-weight: bold;
+  text-decoration: none;
+  color: #000000;
+  font-size: 1.3em;
 }
+
 
 .logo {
   cursor: pointer;
