--- a/my-app/src/styles/HomeViewStyle.css
+++ b/my-app/src/styles/HomeViewStyle.css
@@ -242,6 +242,8 @@
     background-color: white;
     margin: 20px 0px 0px;
     padding: 10px 25px;
+    text-decoration: none;
+    color: black;
 }
 .info-row
 {
