--- a/my-app/src/styles/cartShowComponent.css
+++ b/my-app/src/styles/cartShowComponent.css
@@ -28,6 +28,7 @@ body, html {
     z-index: 9999;
     right: 0;
     margin-right: -100%;
+    height: 100%;
 }
 
 .cartShowComponent-show {
@@ -38,7 +39,7 @@ body, html {
 
 .cartmini-container {
     width: 500px;
-    height: 945px;
+    height: 100%;
     background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
@@ -112,7 +113,7 @@ body, html {
     flex-direction: column;
     background-color: rgb(255, 255, 255);
     overflow-y: auto;
-    height: 680px;
+    height: 100%;
     width: 100%;
 }
 
