--- a/my-app/src/styles/productComponentStyles/ProductComponent.css
+++ b/my-app/src/styles/productComponentStyles/ProductComponent.css
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  transform: translateY(180px);
+  margin-bottom: 50px;
   width: 100%;
 }
 .select-container select{
